vlib/v/checker/tests/generics_non_generic_fn_called_like_a_generic_one.vv
import math

fn main() {
	x := math.sin[f64](1.0)
	println(x)
}
